--- a/storefront/package.json
+++ b/storefront/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "wait": "await-backend",
     "launcher": "launch-storefront",
-    "dev": "npm run wait && npm run launcher dev",
+    "dev:next": "next dev --turbo",
+    "dev": "npm run wait && npm run dev:next",
     "build": "npm run wait && npm run launcher build",
     "start": "npm run launcher start",
     "build:next": "next build",
