--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "medusa-2.0-boilerplate-backend",
+  "name": "demo-lentes-sol",
   "version": "0.0.2",
   "description": "A Prebaked Medusa 2.0 backend",
   "author": "Rasmus Puls",
